
[TestParseWildcardPattern - 1]
&patterns.WildcardPatternNode{}
---

[TestParseVariablePattern - 1]
&patterns.VariablePatternNode{
    Variable: "x",
    Facts:    (*database.Facts)(nil),
    matching: nil,
}
---

[TestParseStructurePattern - 1]
&patterns.StructurePatternNode{
    Name:   "Foo",
    Fields: {
        {
            Name:    "x",
            Pattern: &patterns.VariablePatternNode{
                Variable: "y",
                Facts:    (*database.Facts)(nil),
                matching: nil,
            },
            Span: database.Span{},
        },
    },
    Facts:            (*database.Facts)(nil),
    matching:         nil,
    fieldTemporaries: {},
}
---

[TestParseSetPattern - 1]
&patterns.SetPatternNode{
    Variable:         "x",
    Facts:            (*database.Facts)(nil),
    matching:         nil,
    matchingVariable: nil,
}
---

[TestParseSimpleConstructorPattern - 1]
&patterns.ConstructorPatternNode{
    ConstructorName:            "None",
    Elements:                   nil,
    Facts:                      (*database.Facts)(nil),
    matching:                   nil,
    matchingMarkerConstructor:  (*visit.MarkerConstructorDefinition)(nil),
    matchingVariantConstructor: (*patterns.matchingVariantConstructor)(nil),
}
---

[TestParseComplexConstructorPattern - 1]
&patterns.ConstructorPatternNode{
    ConstructorName: "Some",
    Elements:        {
        &patterns.VariablePatternNode{
            Variable: "x",
            Facts:    (*database.Facts)(nil),
            matching: nil,
        },
        &patterns.VariablePatternNode{
            Variable: "y",
            Facts:    (*database.Facts)(nil),
            matching: nil,
        },
        &patterns.VariablePatternNode{
            Variable: "z",
            Facts:    (*database.Facts)(nil),
            matching: nil,
        },
    },
    Facts:                      (*database.Facts)(nil),
    matching:                   nil,
    matchingMarkerConstructor:  (*visit.MarkerConstructorDefinition)(nil),
    matchingVariantConstructor: (*patterns.matchingVariantConstructor)(nil),
}
---

[TestParseSimpleOrPattern - 1]
&patterns.OrPatternNode{
    Patterns: {
        &patterns.VariablePatternNode{
            Variable: "x",
            Facts:    (*database.Facts)(nil),
            matching: nil,
        },
        &patterns.VariablePatternNode{
            Variable: "y",
            Facts:    (*database.Facts)(nil),
            matching: nil,
        },
    },
    Facts:    (*database.Facts)(nil),
    matching: nil,
}
---

[TestParseComplexOrPattern - 1]
&patterns.OrPatternNode{
    Patterns: {
        &patterns.VariablePatternNode{
            Variable: "x",
            Facts:    (*database.Facts)(nil),
            matching: nil,
        },
        &patterns.VariablePatternNode{
            Variable: "y",
            Facts:    (*database.Facts)(nil),
            matching: nil,
        },
        &patterns.VariablePatternNode{
            Variable: "z",
            Facts:    (*database.Facts)(nil),
            matching: nil,
        },
    },
    Facts:    (*database.Facts)(nil),
    matching: nil,
}
---
